# xiaoyue

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/Algorithm/: CMakeLists.txt
components/Algorithm/WindowEnergy/: WindowEnergy.c  WindowEnergy.h
components/Algorithm/hcalculateNormalization/: hcalculateNormalization.c  hcalculateNormalization.h
components/BSP/: CMakeLists.txt
components/BSP/ADC_DMA/: adc_dma.c  adc_dma.h
components/BSP/Chip_Info/: chip_info.c  chip_info.h
components/BSP/TIMER/: timer.c  timer.h
main/: main.c
